Fixed gap between event cards

--- a/wave/src/style.css
+++ b/wave/src/style.css
@@ -1252,6 +1252,7 @@ input[type="range"] {
   border-top-right-radius: 20px;
   width: 100%;
   height: 100%;
+  margin-bottom: -0.5px;
 }
 
 .card {
